# cVAE

./: .gitattributes  .gitignore  config.py  main.py  pyproject.toml  requirements.txt
data/: __init__.py  dataloader.py
data/raw/: dataset.h5ad
models/: __init__.py  cvae.py  scvae.py
training/: trainer.py
visualization/: __init__.py  plots.py
